--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,6 @@ jobs:
     #- name: Run linters(ignore errors for now)
       #run: yarn lint || true
     - name: Run jest tests
+      env: 
+        API_KEY: ${{ secrets.TEST_API_KEY }}
       run: yarn test
