--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build": "NODE_ENV=production yarn webpack --bail",
     "reset": "rm -rf ./node_modules && yarn cache clean && yarn install",
     "webpack:test": "NODE_ENV=test yarn webpack --silent",
-    "test": "yarn webpack:test && NODE_ENV=test yarn jest",
-    "lint": "yarn eslint --plugin prettier --rule prettier/prettier:error src/*"
+    "lint": "yarn eslint --plugin prettier --rule prettier/prettier:error src/*",
+    "selenium": "yarn jest -c jest.config.selenium.js",
+    "integration": "start-server-and-test 'yarn start' http://localhost:8888 'yarn selenium'",
+    "test": "yarn webpack:test && NODE_ENV=test yarn jest && yarn integration"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -20,6 +22,7 @@
     "@testing-library/dom": "^7.22.0",
     "@testing-library/jest-dom": "^5.11.2",
     "babel-jest": "^26.2.2",
+    "chromedriver": "^84.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.0.0",
     "eslint": "^7.5.0",
@@ -32,6 +35,8 @@
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "start-server-and-test": "^1.11.3",
     "webdataconnector": "tableau/webdataconnector",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
