--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]
+        os: [ubuntu-18.04]
     steps:
     - uses: actions/checkout@v2
 
@@ -26,11 +26,12 @@ jobs:
       run: yarn install
 
     - name: Run jest tests
-      env:
-        API_KEY: ${{ secrets.TEST_API_KEY }}
       run: yarn test
 
     - name: Run integration tests
+      env:
+        API_KEY: ${{ secrets.TEST_API_KEY }}
+        API_URL: ${{ secrets.TEST_API_URL }}
       run: yarn integration
 
     - name: Run production build to ensure the build works
