--- a/package.json
+++ b/package.json
@@ -19,8 +19,22 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@testing-library/dom": "^7.22.0",
     "@testing-library/jest-dom": "^5.11.2",
+    "@types/bootstrap": "^4.5.0",
+    "@types/chromedriver": "^81.0.0",
+    "@types/eslint": "^7.2.3",
+    "@types/eslint-config-prettier": "^6.11.0",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/file-loader": "^4.2.0",
+    "@types/jquery": "^3.5.1",
+    "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/node": "^14.11.2",
+    "@types/prettier": "^2.1.1",
+    "@types/selenium-webdriver": "^4.0.9",
+    "@types/webpack": "^4.41.22",
+    "@types/webpack-dev-server": "^3.11.0",
     "babel-jest": "^26.2.2",
     "chromedriver": "^84.0.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -32,11 +46,13 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
-    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "start-server-and-test": "^1.11.3",
+    "ts-loader": "^8.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
     "webdataconnector": "tableau/webdataconnector",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
