--- a/package.json
+++ b/package.json
@@ -29,18 +29,20 @@
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/file-loader": "^4.2.0",
-    "@types/jquery": "^3.5.1",
+    "@types/jquery": "^3.5.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.11.2",
     "@types/prettier": "^2.1.1",
     "@types/selenium-webdriver": "^4.0.9",
     "@types/webpack": "^4.41.22",
     "@types/webpack-dev-server": "^3.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "babel-jest": "^26.2.2",
     "chromedriver": "^84.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.0.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.0.0",
@@ -61,6 +63,7 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "jquery": "^3.5.1"
   }
 }
