--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jquery": "^3.5.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.11.2",
+    "@types/popper.js": "^1.11.0",
     "@types/prettier": "^2.1.1",
     "@types/selenium-webdriver": "^4.0.9",
     "@types/webpack": "^4.41.22",
@@ -40,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "babel-jest": "^26.2.2",
+    "bootstrap": "^4.5.3",
     "chromedriver": "^86.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.0.0",
@@ -50,7 +52,9 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "popper.js": "^1.16.1",
     "prettier": "^2.0.5",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "start-server-and-test": "^1.11.3",
@@ -64,7 +68,6 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "jquery": "^3.5.1"
+    "axios": "^0.19.2"
   }
 }
