--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "noImplicitAny": false,
-        "module": "commonjs",
+        "module": "es6",
         "target": "es5",
         "allowJs": true,
         "sourceMap": true,
+        "moduleResolution": "node",
         "esModuleInterop": true
     }
 }
