--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/file-loader": "^4.2.0",
     "@types/jquery": "^3.5.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/nock": "^11.1.0",
     "@types/node": "^14.11.2",
     "@types/popper.js": "^1.11.0",
     "@types/prettier": "^2.1.1",
@@ -54,6 +55,7 @@
     "jest": "^26.1.0",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "nock": "^13.0.4",
     "popper.js": "^1.16.1",
     "prettier": "^2.0.5",
     "selenium-webdriver": "^4.0.0-alpha.7",
@@ -68,6 +70,7 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "axios-retry": "^3.1.9"
   }
 }
