Updates To Tableau Connector
Add/Update data normalization logic. Convert arrays to strings, and
ensure datetime fields returned from the bridge api are in a format
accepted by tableau.

Add a tableau class singleton export. This makes things significantly
faster, and fixes some UI bugs.

Updates to required parameter logic

Allow for an ID or All checkbox

Add note about secrets in test workflow

Remove commented out line in button file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,11 +28,13 @@ jobs:
     - name: Run jest tests
       run: yarn test
 
+      # Note: pull requests made via a forked repo do NOT have access to repository secrets
+      # See https://docs.github.com/en/free-pro-team@latest/actions/reference/encrypted-secrets#using-encrypted-secrets-in-a-workflow
     - name: Run integration tests
+      run: yarn integration
       env:
         API_KEY: ${{ secrets.TEST_API_KEY }}
         API_URL: ${{ secrets.TEST_API_URL }}
-      run: yarn integration
 
     - name: Run production build to ensure the build works
       run: yarn build
