--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,10 +9,14 @@ updates:
     # Disbable auto pull requests for now
     open-pull-requests-limit: 0
     ignore:
-      # The below 4 deps are part of the "webdataconnector": "tableau/webdataconnector" dev dependency.
+      # The below deps are part of the "webdataconnector": "tableau/webdataconnector" dev dependency.
       # These can be safley ignored for now since the tableau/webdataconnector is only used to run the
       # tableau simulator during development, and is not part of the production build
-      - dependency-name: "http-proxy"
-      - dependency-name: "hapi"
       - dependency-name: "ammo"
+      - dependency-name: "corsproxy"
+      - dependency-name: "hapi"
+      - dependency-name: "http-proxy"
+      - dependency-name: "http-server"
+      - dependency-name: "npm-run-all"
       - dependency-name: "subtext"
+      - dependency-name: "webdataconnector*"
