--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-tsdoc": "^0.2.11",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
@@ -72,5 +73,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "axios-retry": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=14.15.0",
+    "npm": ">=6.14.0"
   }
 }
