Fix data processing bug (#20)
* Fix data processing bug

Fixes a bug where tableau.getData(doneCallback) calls the doneCallback
before processing of data is completed.

Adds some polyfill so Symbol.asyncIterator works in tableau desktop app

Fixes BRD-5253

* Run prettier on config files

* Dependency updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "moduleResolution": "node",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "lib": ["DOM", "ES5", "ScriptHost", "DOM.Iterable", "ESNext"],
     }
 }
