--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
+    "@babel/plugin-transform-regenerator": "^7.12.13",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/dom": "^7.22.0",
@@ -72,7 +73,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "axios-retry": "^3.1.9"
+    "axios-retry": "^3.1.9",
+    "core-js": "3"
   },
   "engines": {
     "node": ">=14.15.0",
